added link for last month's giveaway

--- a/_posts/2018-06-22-Cap-Touch.md
+++ b/_posts/2018-06-22-Cap-Touch.md
@@ -55,3 +55,5 @@ The other one is a 4K version of the touch keypad. The wider version introduces 
 ## Giveaway
 
 Lastly, since the May giveaway ends tomorrow, I'll be selecting the winner and putting up the new giveaway. To celebrate this release, the Touch osu! Keypad will be this month's keypad. Please look forward to it and enter May's giveaway if you haven't already and are reading this on the day it was posted!
+
+[Link to last month's giveaway featuring a blue and pink MacroPad](https://gleam.io/competitions/1oHsd-june-limited-edition-pastel-macropad-giveaway)
